# prompt-generator

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.runtime.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260714_0001_create_optimizations.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: health.py  optimizations.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  optimization.py
backend/app/schemas/: optimization.py
backend/app/services/: ai_provider.py  local_optimizer.py  optimization_service.py  prompt_analyzer.py
backend/tests/: conftest.py  test_ai_provider.py  test_analyzer.py  test_api.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  PromptWorkspace.tsx  styles.css
frontend/tests/: frontend.test.mjs
